<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>jp.massbank</groupId>
	<artifactId>SpectrumSearch</artifactId>
	<packaging>jar</packaging>

	<version>0.0.1-SNAPSHOT</version>
	<url>http://www.massbank.jp/SearchPage.html</url>
	<name>SpectrumSearch</name>
	<organization>
		<name>MassBank</name>
		<url>http://www.massbank.jp/</url>
	</organization>
	<scm>
		<url>https://github.com/MassBank/SpectrumSearch.git</url>
	</scm>

	<prerequisites>
		<maven>3.2.3</maven>
	</prerequisites>


	<issueManagement>
		<system>github</system>
		<url>https://github.com/MassBank/SpectrumSearch/issues</url>
	</issueManagement>
	<description>Search similar spectra on a peak-to-peak basis.
Retrieves spectra similar to user's spectrum in terms of the m/z value. This search is helpful to identify chemical compound by comparing similar spectra on a 3D-display.</description>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>
	<dependencies>
		<dependency>
			<groupId>log4j</groupId>
			<artifactId>log4j</artifactId>
			<version>1.2.17</version>
		</dependency>
	</dependencies>

	<build>
		<finalName>SpectrumSearch</finalName>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.2</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>2.5</version>
				<configuration>
					<archive>
						<manifest>
							<addDefaultImplementationEntries>true</addDefaultImplementationEntries>
							<addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
							<mainClass>jp.massbank.spectrumsearch.SearchPage</mainClass>
							<addClasspath>true</addClasspath>
						</manifest>
						<manifestEntries>
							<Permissions>all-permissions</Permissions>
							<Codebase>*</Codebase>
							<Application-Name>SpectrumSearch</Application-Name>
						</manifestEntries>
					</archive>
					<outputDirectory>${project.build.directory}/dist</outputDirectory>
				</configuration>
			</plugin>



			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-dependency-plugin</artifactId>
				<executions>
					<execution>
						<id>copy-dependencies</id>
						<phase>package</phase>
						<goals>
							<goal>copy-dependencies</goal>
						</goals>
						<configuration>
							<outputDirectory>
								${project.build.directory}/dist
							</outputDirectory>
						</configuration>
					</execution>
				</executions>
			</plugin>


			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>properties-maven-plugin</artifactId>
				<version>1.0-alpha-2</version>
				<executions>
					<execution>
						<phase>validate</phase>
						<goals>
							<goal>read-project-properties</goal>
						</goals>
						<configuration>
							<files>
								<file>src/main/certconfig.properties</file>
							</files>
						</configuration>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jarsigner-plugin</artifactId>
				<version>1.3.2</version>
				<executions>
					<execution>
						<id>sign</id>
						<goals>
							<goal>sign</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<archiveDirectory>${project.build.directory}/dist</archiveDirectory>
					<includes>
						<include>*.jar</include>
					</includes>
				</configuration>
			</plugin>


			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>2.10.1</version>
				<configuration>
					<show>private</show>
					<encoding>UTF-8</encoding>
					<locale>en</locale>
					<javadocVersion>1.8</javadocVersion>
					<failOnError>false</failOnError>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>findbugs-maven-plugin</artifactId>
				<version>3.0.0</version>
			</plugin>
		</plugins>
	</build>


	<reporting>
		<plugins>
			<plugin>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>2.10.1</version>
				<configuration>
					<show>private</show>
					<linksource>true</linksource>
					<keywords>true</keywords>
					<use>false</use>
					<windowtitle>SpectrumSearch</windowtitle>
					<encoding>UTF-8</encoding>
					<locale>en</locale>
					<javadocVersion>1.8</javadocVersion>
					<verbose>true</verbose>
					<minmemory>32m</minmemory>
					<maxmemory>128m</maxmemory>
					<failOnError>false</failOnError>
					<includeDependencySources>true</includeDependencySources>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>findbugs-maven-plugin</artifactId>
				<version>3.0.0</version>
				<configuration>
					<xmlOutput>true</xmlOutput>
				</configuration>
			</plugin>
		</plugins>
	</reporting>
</project>


